ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts:2:8
  |
2 | module TypeModule2 {
  |        ^^^^^^^^^^^

error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1/input.ts:3:1
  |
3 | }
  | ^

